--- a/frond-end-ecomerce/src/index.css
+++ b/frond-end-ecomerce/src/index.css
@@ -1,10 +1,15 @@
 .navBar {
 
 }
-
+.contenedorDropDown{
+  width: 100%;
+  background-color: rgb(118, 115, 115);
+  justify-content: center;
+  text-align: center;
+}
 .superiorNav {
   display: grid;
-  background-color: rgb(233, 230, 230);
+  background-color: rgb(147, 6, 241);
   grid-template-columns: 60% 30% 10%;
   font-size: 13px;
 }
@@ -27,7 +32,8 @@
   width: 20px;
 }
 .botones{
-  background-color: red;
+  background-color:rgb(137, 134, 134);
   border-radius: 0;
-  border: solid black 1px;
+  border-left: solid black 1px;
+  border-right: solid black 1px;
 }
