--- a/frond-end-ecomerce/src/index.css
+++ b/frond-end-ecomerce/src/index.css
@@ -2,16 +2,22 @@
 
 }
 .contenedorDropDown{
+  display: flex;
   width: 100%;
-  background-color: rgb(118, 115, 115);
+  /* background-color:  #E53935; */
+  background-color: #333333 ;
   justify-content: center;
   text-align: center;
+
+;
 }
 .superiorNav {
   display: grid;
-  background-color: rgb(147, 6, 241);
+  background-color: #00897B;
   grid-template-columns: 60% 30% 10%;
   font-size: 13px;
+  justify-content: center;
+  padding-bottom:  3px;
 }
 .banner{
   width: 100%;
@@ -32,8 +38,15 @@
   width: 20px;
 }
 .botones{
-  background-color:rgb(137, 134, 134);
+  background-color: #E53935 ;
   border-radius: 0;
-  border-left: solid black 1px;
-  border-right: solid black 1px;
+  border-left: solid rgb(30, 30, 30) 0.5px;
+  border-right: solid rgb(30, 30, 30) 0.5px;
+}
+.botones  :hover{
+  background-color: black ;
+  color: white;
+  border-radius: 0;
+  border-left: solid white 0.5px;
+  border-right: solid white 0.5px;
 }
