--- a/frond-end-ecomerce/src/styles/asside.css
+++ b/frond-end-ecomerce/src/styles/asside.css
@@ -1,7 +1,72 @@
 .asside-busqueda{
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
-    height: 300px;
-    width: 100px;
-    margin-left: 10px;
+    justify-content: space-around;
+    height: 400px;
+    width: 240px;
+    margin-left: 2%;
+    border: 1px solid #E53935;
+    border-radius: 10px;
+    padding-right: 15px;
+    padding-left: 15px;
+    background-color: white;
 }
+.asside-busqueda select{
+    height: 50px;
+    color: white;
+    text-align: center;
+    background-color: #E53935;
+    border-radius: 5px;
+    border:none;
+    appearance: none;
+    background: #E53935 url('data:image/svg+xml;utf8,<svg fill="%23333" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg"><path d="M7 10l5 5 5-5z"/></svg>') no-repeat right 10px center;
+    background-size: 18px 18px;
+}
+.asside-busqueda select option{
+  background-color: #04AA6D;
+}
+.asside-busqueda section option:hover{
+  background-color: #6204aa;
+  opacity: 0.8%;
+}
+.assideButton{
+    height: 40px;
+    width: 120px;
+    background-color: transparent;
+    border: solid 2px  #E53935;
+    border-radius: 8px;
+    transition: 0.25s ease-in-out;
+    margin-left: 19.5%;
+  
+}
+.assideButton:hover{
+    height: 40px;
+    width: 120px;
+    background-color: #E53935;
+    border: none;
+    border-radius: 8px;
+    margin-top: 15px;
+    color: white;
+}
+.slider {
+    -webkit-appearance: none;  /* Override default CSS styles */
+    appearance: none;
+    width: 100%; /* Full-width */
+    height: 6px; /* Specified height */
+    background: #d3d3d3; /* Grey background */
+    outline: none; /* Remove outline */
+    opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
+    -webkit-transition: .2s; /* 0.2 seconds transition on hover */
+    transition: opacity .2s;
+  }
+  .slider::-webkit-slider-thumb {
+    -webkit-appearance: none; /* Override default look */
+    appearance: none;
+    width: 15px; /* Set a specific slider handle width */
+    height: 15px;
+    border-radius: 50%; /* Slider handle height */
+    background: #04AA6D; /* Green background */
+    cursor: pointer; /* Cursor on hover */
+    
+  }
