--- a/frond-end-ecomerce/src/styles/searchbar.css
+++ b/frond-end-ecomerce/src/styles/searchbar.css
@@ -8,6 +8,10 @@
     padding: 5px 0px 5px 0px;
     text-align: center;
     background-color: #00897B;
+    margin-bottom: 40px;
+    -webkit-box-shadow: -1px -8px 39px 17px rgba(0,0,0,0.75);
+    -moz-box-shadow: -1px -8px 39px 17px rgba(0,0,0,0.75);
+    box-shadow: -1px -8px 20px 5px rgba(0,0,0,0.75);
   }
   .search{
     width: 600px;
