--- a/frond-end-ecomerce/src/styles/register.css
+++ b/frond-end-ecomerce/src/styles/register.css
@@ -5,20 +5,30 @@ h5{
     color: white;
     margin-bottom: 50px;
 }
+form{
+    display: flex;
+    flex-direction: column;
+}
+    label{
+        color: white;
+        font-size: smaller;
+        
+    }
 .logo{
     margin-left: 40%;
 }
-.logContenedor{
+.contenedor{
+    padding-top: 20px;
     margin-left: 20%;
-    background-color: #DA0A22;
+    background-color: #DA0A22;;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    height: 300px;
+    height: 470px;
     width:60%;
     text-align: center;
 }
-.logInput{
+.regInput{
     width: 60%;
     padding-bottom: 10px;
     margin-bottom: 15px;
@@ -30,11 +40,11 @@ h5{
     outline: none;
     margin-left: 25px;
 }
-.logInput::placeholder{
+.regInput::placeholder{
     color: white;
     font-size: large;
 }
-.loginBtn{
+.regBtn{
     background-color: #00897B;
     color: white;
     width: 150px;
@@ -45,7 +55,7 @@ h5{
     transition: 0.25s ease-in-out;
     border: none;
 }
-.loginBtn:hover{
+.regBtn:hover{
     background-color: #DA0A22;
     color: white;
     border: solid white 1px;
